--- a/package.json
+++ b/package.json
@@ -1,30 +1,40 @@
 {
-  "main": "index.js",
-  "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "web": "expo start --web",
-    "start": "react-native start"
-  },
-  "dependencies": {
-    "@react-navigation/drawer": "^6.1.4",
-    "@react-navigation/native": "^6.0.2",
-    "@react-navigation/native-stack": "^6.1.0",
-    "expo": "~42.0.1",
-    "expo-splash-screen": "~0.11.2",
-    "expo-status-bar": "~1.0.4",
-    "expo-updates": "~0.8.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "~0.63.4",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-unimodules": "~0.14.5",
-    "react-native-web": "~0.13.12"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.9.0"
-  },
-  "private": true
+	"main": "index.js",
+	"scripts": {
+		"android": "react-native run-android",
+		"ios": "react-native run-ios",
+		"web": "expo start --web",
+		"start": "react-native start",
+		"test": "jest"
+	},
+	"dependencies": {
+		"@react-navigation/drawer": "^6.1.4",
+		"@react-navigation/native": "^6.0.2",
+		"@react-navigation/native-stack": "^6.1.0",
+		"expo": "~42.0.1",
+		"expo-splash-screen": "~0.11.2",
+		"expo-status-bar": "~1.0.4",
+		"expo-updates": "~0.8.1",
+		"react": "16.13.1",
+		"react-dom": "16.13.1",
+		"react-native": "~0.63.4",
+		"react-native-gesture-handler": "~1.10.2",
+		"react-native-reanimated": "~2.2.0",
+		"react-native-screens": "~3.4.0",
+		"react-native-unimodules": "~0.14.5",
+		"react-native-web": "~0.13.12"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.9.0",
+		"@testing-library/react-native": "^7.2.0",
+		"jest": "^27.1.0",
+		"react-test-renderer": "^17.0.2"
+	},
+	"private": true,
+	"jest": {
+		"preset": "react-native",
+		"transformIgnorePatterns": [
+			"node_modules/(?!@ngrx|(?!deck.gl)|ng-dynamic)"
+		]
+	}
 }
